--- a/composer.json
+++ b/composer.json
@@ -13,12 +13,12 @@
         "php": ">=5.3.0",
         "league/flysystem": "^1.0",
         "illuminate/support": "5.*",
-        "xujif/ucloud-ufile-sdk": "~1.0"
+        "zuitu/ufile-sdk": "~1.0"
     },
 
     "autoload": {
         "psr-4": {
-            "Zuitu\\UfileStorage\\": "src/"
+            "zuitu\\UfileStorage\\": "src/"
         }
     }
 }
