--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "zuitu/ufile-storage",
+    "name": "hlf_513/ufile-storage",
     "description": "ufile storage for lumen",
     "license": "MIT",
     "keywords": ["ufile storage lumen"],
@@ -7,13 +7,17 @@
         {
             "name": "zuitu",
             "email": "zuitu@foxmail.com"
+        },
+        {
+            "name": "longfei.he",
+            "email": "hlf513@gmail.com"
         }
     ],
     "require": {
         "php": ">=5.3.0",
         "league/flysystem": "^1.0",
         "illuminate/support": "5.*",
-        "zuitu/ufile-sdk": "~1.0"
+        "hlf_513/ucloud-ufile-sdk": "~1.0"
     },
 
     "autoload": {
